Added Application Repo, Service, Controller. Change mappedBy(s). Application Response and Mapper. Refactor getCurrentUser into Utils class. (Not working yet)